WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159508
[Fetch API] Response constructor should throw in case of bad reason phrase
https://bugs.webkit.org/show_bug.cgi?id=159508
Summary
[Fetch API] Response constructor should throw in case of bad reason phrase
youenn fablet
Reported
2016-07-07 01:57:57 PDT
We should validate reason phrase as per
https://tools.ietf.org/html/rfc7230#section-3.1.2
Attachments
Patch
(6.18 KB, patch)
2016-07-07 02:05 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.22 KB, patch)
2016-07-07 08:54 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-07-07 02:05:07 PDT
Created
attachment 282999
[details]
Patch
Alex Christensen
Comment 2
2016-07-07 08:47:21 PDT
Comment on
attachment 282999
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282999&action=review
> Source/WebCore/platform/network/HTTPParsers.cpp:105 > +bool isValidReasonPhrase(const String& value)
The other functions like this have a comment. I think this needs one, too. // See RFC 7230, Section 3.1.2.
youenn fablet
Comment 3
2016-07-07 08:54:12 PDT
Created
attachment 283017
[details]
Patch for landing
youenn fablet
Comment 4
2016-07-07 08:54:38 PDT
Thanks for the review. (In reply to
comment #2
)
> Comment on
attachment 282999
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=282999&action=review
> > > Source/WebCore/platform/network/HTTPParsers.cpp:105 > > +bool isValidReasonPhrase(const String& value) > > The other functions like this have a comment. I think this needs one, too. > // See RFC 7230, Section 3.1.2.
Done
WebKit Commit Bot
Comment 5
2016-07-07 09:24:52 PDT
Comment on
attachment 283017
[details]
Patch for landing Clearing flags on attachment: 283017 Committed
r202910
: <
http://trac.webkit.org/changeset/202910
>
WebKit Commit Bot
Comment 6
2016-07-07 09:24:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug