[Fetch API] Response constructor should throw in case of bad reason phrase https://bugs.webkit.org/show_bug.cgi?id=159508

Patch by Youenn Fablet <youenn@apple.com> on 2016-07-07
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/response/response-error-expected.txt:

Source/WebCore:

Covered by rebased test.

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::initializeWith): Validating reason phrase with new routine.
Throwing a TypeError in case of error.
* platform/network/HTTPParsers.cpp:
(WebCore::isValidReasonPhrase): Added to validate reason phrase according
https://tools.ietf.org/html/rfc7230#section-3.1.2
* platform/network/HTTPParsers.h:

Canonical link: https://commits.webkit.org/177640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202910 268f45cc-cd09-0410-ab3c-d52691b4dbfc